# QtGifImage

./: CMakeLists.txt  README.md
cmake/: include.cmake
cmakelists_example/: CMakeLists.txt
examples/creategif/: main.cpp
examples/extractFrames/: main.cpp
include/gifimage/: qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h
